--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-helmet-async": "^1.3.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "autoprefixer": "^10.4.16",
