--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
-    "@types/node": "^16.18.53",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -19,16 +16,19 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "yup": "^1.3.0"
+    "yup": "^1.3.0",
+    "framer-motion": "^10.15.0",
+    "fontfaceobserver": "^2.3.0",
+    "@lottiefiles/react-lottie-player": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "prepare": "husky install",
-    "format": "prettier --write",
+    "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
-    "lint": "eslint --cache --fix",
-    "eject": "react-scripts eject"
+    "format": "prettier --write",
+    "prepare": "husky install",
+    "lint": "eslint --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -57,10 +57,20 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "@types/node": "^16.18.53",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/fontfaceobserver": "^2.1.0",
+    "@types/react-router-dom": "^5.3.3",
     "husky": "^8.0.3",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "lint-staged": "^13.0.3"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "npm run lint",
+    "*.{js,ts,tsx,css}": "npm run format"
   }
 }
