config meta data

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Getlinked - A Tech Hackathon Project by Ezekiel Nwoye",
+  "name": "Getlinked",
   "short_name": "Getlinked",
   "icons": [
     {
