--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lottiefiles/react-lottie-player": "^3.5.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@studio-freight/lenis": "^1.0.25",
     "axios": "^1.5.0",
+    "fontfaceobserver": "^2.3.0",
     "formik": "^2.4.5",
+    "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -16,10 +20,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
-    "yup": "^1.3.0",
-    "framer-motion": "^10.15.0",
-    "fontfaceobserver": "^2.3.0",
-    "@lottiefiles/react-lottie-player": "^3.5.0"
+    "yup": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +50,11 @@
     ]
   },
   "devDependencies": {
+    "@types/fontfaceobserver": "^2.1.0",
+    "@types/node": "^16.18.53",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
@@ -57,17 +63,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "@types/node": "^16.18.53",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@types/fontfaceobserver": "^2.1.0",
-    "@types/react-router-dom": "^5.3.3",
     "husky": "^8.0.3",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5",
-    "lint-staged": "^13.0.3"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "npm run lint",
